# cs2-automate

./: .gitignore  CMakeLists.txt  README.md  build.bat  counterstrafe.cpp  counterstrafe.h  keyboard_input.cpp  keyboard_input.h  main.cpp  mouse_control.cpp  mouse_control.h  overlay.cpp  weapon_recoil.cpp  weapon_recoil.h
